--- a/.github/workflows/setup_project.yml
+++ b/.github/workflows/setup_project.yml
@@ -10,7 +10,9 @@ jobs:
   setup_project:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Create project structure
       run: |
@@ -39,15 +41,33 @@ jobs:
         echo "# Project dependencies" > requirements.txt
         echo ".env\nvenv/\n__pycache__/\n*.pyc" > .gitignore
 
+    - name: Check for changes
+      id: git-check
+      run: |
+        git status
+        git diff
+        echo "::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)"
+
     - name: Commit changes
+      if: steps.git-check.outputs.modified == 'true'
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Set up MLOps project structure" -a
+        git commit -m "Set up MLOps project structure" -a || echo "No changes to commit"
 
     - name: Push changes
+      if: steps.git-check.outputs.modified == 'true'
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: ${{ github.ref }}
+
+    - name: Check for errors
+      if: failure()
+      run: |
+        echo "Workflow failed. Here's some debugging information:"
+        git status
+        git log --oneline -n 5
+        echo "Current directory contents:"
+        ls -R
