--- a/.github/workflows/setup_project.yml
+++ b/.github/workflows/setup_project.yml
@@ -1,67 +1,40 @@
 name: Setup MLOps Project Structure
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
   setup_project:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+    - uses: actions/checkout@v4  # Updated to v4
 
-    - name: Create project structure
+    - name: Create test file
       run: |
-        mkdir -p .github/workflows
-        mkdir -p src/{data,models,utils}
-        mkdir -p notebooks
-        mkdir -p tests
-        mkdir -p config
-        mkdir -p scripts
-
-    - name: Create initial files
-      run: |
-        echo "# MLOps-Stock" > README.md
-        echo "name: Train Model" > .github/workflows/train_model.yml
-        echo "# Data preparation functions" > src/data/data_preparation.py
-        echo "# Stock prediction pipeline" > src/models/stock_prediction_pipeline.py
-        echo "# Helper functions" > src/utils/helper_functions.py
-        echo "# Exploratory Data Analysis" > notebooks/exploratory_data_analysis.ipynb
-        echo "# Test data preparation" > tests/test_data_preparation.py
-        echo "# Test stock prediction pipeline" > tests/test_stock_prediction_pipeline.py
-        echo "{}" > config/config.json
-        echo "# Model deployment configuration" > config/deployment_config.yml
-        echo "# Inference configuration" > config/inference_config.yml
-        echo "# Azure ML training script" > scripts/train_aml.py
-        echo "# Model deployment script" > scripts/deploy_model.py
-        echo "# Project dependencies" > requirements.txt
-        echo ".env\nvenv/\n__pycache__/\n*.pyc" > .gitignore
+        echo "# Test File" > test.md
+        git status
+        git diff
 
     - name: Check for changes
       id: git-check
       run: |
-        git status
-        git diff
-        echo "::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)"
+        if git diff --exit-code; then
+          echo "changed=false" >> $GITHUB_OUTPUT
+        else
+          echo "changed=true" >> $GITHUB_OUTPUT
+        fi
 
     - name: Commit changes
-      if: steps.git-check.outputs.modified == 'true'
+      if: steps.git-check.outputs.changed == 'true'
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Set up MLOps project structure" -a || echo "No changes to commit"
+        git commit -m "Add test file" -a
 
     - name: Push changes
-      if: steps.git-check.outputs.modified == 'true'
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
+      if: steps.git-check.outputs.changed == 'true'
+      run: git push
 
     - name: Check for errors
       if: failure()
