--- a/.github/workflows/setup_project.yml
+++ b/.github/workflows/setup_project.yml
@@ -7,13 +7,34 @@ jobs:
   setup_project:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4  # Updated to v4
+    - uses: actions/checkout@v4
 
-    - name: Create test file
+    - name: Create project structure
       run: |
-        echo "# Test File" > test.md
-        git status
-        git diff
+        mkdir -p .github/workflows
+        mkdir -p src/{data,models,utils}
+        mkdir -p notebooks
+        mkdir -p tests
+        mkdir -p config
+        mkdir -p scripts
+
+    - name: Create initial files
+      run: |
+        echo "# MLOps-Stock" > README.md
+        echo "name: Train Model" > .github/workflows/train_model.yml
+        echo "# Data preparation functions" > src/data/data_preparation.py
+        echo "# Stock prediction pipeline" > src/models/stock_prediction_pipeline.py
+        echo "# Helper functions" > src/utils/helper_functions.py
+        echo "# Exploratory Data Analysis" > notebooks/exploratory_data_analysis.ipynb
+        echo "# Test data preparation" > tests/test_data_preparation.py
+        echo "# Test stock prediction pipeline" > tests/test_stock_prediction_pipeline.py
+        echo "{}" > config/config.json
+        echo "# Model deployment configuration" > config/deployment_config.yml
+        echo "# Inference configuration" > config/inference_config.yml
+        echo "# Azure ML training script" > scripts/train_aml.py
+        echo "# Model deployment script" > scripts/deploy_model.py
+        echo "# Project dependencies" > requirements.txt
+        echo ".env\nvenv/\n__pycache__/\n*.pyc" > .gitignore
 
     - name: Check for changes
       id: git-check
@@ -30,7 +51,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Add test file" -a
+        git commit -m "Set up MLOps project structure" -a
 
     - name: Push changes
       if: steps.git-check.outputs.changed == 'true'
