--- a/.github/workflows/setup_project.yml
+++ b/.github/workflows/setup_project.yml
@@ -14,17 +14,17 @@ jobs:
 
     - name: Create project structure
       run: |
-        mkdir -p .github/workflows
         mkdir -p src/{data,models,utils}
         mkdir -p notebooks
         mkdir -p tests
         mkdir -p config
         mkdir -p scripts
+        echo "Project structure created"
+        ls -R
 
-    - name: Create initial files
+    - name: Create or update initial files
       run: |
         echo "# MLOps-Stock" > README.md
-        echo "name: Train Model" > .github/workflows/train_model.yml
         echo "# Data preparation functions" > src/data/data_preparation.py
         echo "# Stock prediction pipeline" > src/models/stock_prediction_pipeline.py
         echo "# Helper functions" > src/utils/helper_functions.py
@@ -38,14 +38,20 @@ jobs:
         echo "# Model deployment script" > scripts/deploy_model.py
         echo "# Project dependencies" > requirements.txt
         echo ".env\nvenv/\n__pycache__/\n*.pyc" > .gitignore
+        echo "# Placeholder for train_model workflow" > scripts/train_model_workflow_placeholder.yml
+        echo "Files created or updated"
+        ls -R
 
     - name: Check for changes
       id: git-check
       run: |
-        if git diff --exit-code; then
-          echo "changed=false" >> $GITHUB_OUTPUT
-        else
+        git status
+        if [[ -n $(git status -s) ]]; then
           echo "changed=true" >> $GITHUB_OUTPUT
+          echo "Changes detected"
+        else
+          echo "changed=false" >> $GITHUB_OUTPUT
+          echo "No changes detected"
         fi
 
     - name: Commit and push changes
@@ -56,12 +62,13 @@ jobs:
         git add .
         git commit -m "Set up MLOps project structure" -a
         git push
+        echo "Changes committed and pushed"
 
-    - name: Check for errors
-      if: failure()
+    - name: No changes to commit
+      if: steps.git-check.outputs.changed != 'true'
+      run: echo "No changes to commit"
+
+    - name: List repository contents
       run: |
-        echo "Workflow failed. Here's some debugging information:"
-        git status
-        git log --oneline -n 5
-        echo "Current directory contents:"
+        echo "Final repository structure:"
         ls -R
