--- a/.github/workflows/azure_ml_train.yml
+++ b/.github/workflows/azure_ml_train.yml
@@ -1,34 +1,36 @@
-name: Azure ML Training
+name: Azure ML Workflow
+
    on:
      push:
        branches: [ main ]
      pull_request:
        branches: [ main ]
-     workflow_dispatch:
 
    permissions:
      id-token: write
      contents: read
 
    jobs:
-     train:
+     train-model:
        runs-on: ubuntu-latest
        steps:
        - uses: actions/checkout@v2
-       - name: Set up Python
-         uses: actions/setup-python@v2
-         with:
-           python-version: '3.8'
-       - name: Install dependencies
-         run: |
-           python -m pip install --upgrade pip
-           pip install -r requirements.txt
-       - name: Azure Login
+       - name: Azure login
          uses: azure/login@v1
          with:
            client-id: ${{ secrets.AZURE_CLIENT_ID }}
            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-       - name: Run Azure ML training
+       
+       - name: Set up Python
+         uses: actions/setup-python@v2
+         with:
+           python-version: '3.8'
+       
+       - name: Install dependencies
          run: |
-           python scripts/train_aml.py
+           python -m pip install --upgrade pip
+           pip install -r requirements.txt
+       
+       - name: Run Azure ML script
+         run: python train_aml.py
