--- a/.github/workflows/azure_ml_train.yml
+++ b/.github/workflows/azure_ml_train.yml
@@ -14,24 +14,33 @@ jobs:
   train-model:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
     - name: Azure login
       uses: azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.8'
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
+
     - name: Run Azure ML script
       run: python train_aml.py
+
+    - name: Diagnostic information
+      run: |
+        echo "GitHub Repository: ${{ github.repository }}"
+        echo "Branch: ${{ github.ref }}"
+        echo "Workflow: ${{ github.workflow }}"
+        echo "Actor: ${{ github.actor }}"
+        echo "Event Name: ${{ github.event_name }}"
