--- a/.github/workflows/azure_ml_train.yml
+++ b/.github/workflows/azure_ml_train.yml
@@ -20,9 +20,7 @@ jobs:
     - name: Azure login
       uses: azure/login@v1
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -35,7 +33,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run Azure ML script
-      run: python train_aml.py
+      run: python scripts/train_aml.py
 
     - name: Diagnostic information
       run: |
