--- a/.github/workflows/azure_ml_train.yml
+++ b/.github/workflows/azure_ml_train.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pandas numpy scikit-learn xgboost mlflow joblib yfinance azureml-sdk
 
     - name: Run Azure ML script
       run: python scripts/train_aml.py
