--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 # Project dependencies
-azureml-sdk[automl]==1.57.0
-scikit-learn==1.3.2
+azureml-sdk[automl]>=1.57.0,<1.58.0
+scikit-learn>=1.3.2,<1.6.0
 pandas
 numpy
 xgboost
 mlflow
 joblib
 yfinance
-azureml-sdk
