--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# Project dependencies
-azureml-sdk[automl]>=1.57.0,<1.58.0
-scikit-learn>=1.3.2,<1.6.0
+azureml-sdk[automl]
+scikit-learn
 pandas
 numpy
 xgboost
