--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 # Project dependencies
 azureml-sdk
-pandas
 numpy
 xgboost
 mlflow
 joblib
-yfinance
+yfinance==0.2.4
+pandas==1.5.3
+azure-ai-ml==1.3.0
+azure-identity==1.12.0
+azure-cli==2.37.0
+pytest==7.4.0
