--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # Project dependencies
-azureml-sdk
-pandas
-numpy
-scikit-learn
-xgboost
-mlflow
-joblib
-yfinance
-azureml-sdk[automl]
+azureml-sdk==1.48.0 
+pandas==1.5.3
+numpy==1.21.0
+scikit-learn==1.2.2
+xgboost==1.6.2
+mlflow==2.3.2
+joblib==1.2.0
+yfinance==0.2.12
+azureml-sdk[automl]==1.48.0
