--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-# Project dependencies
-azureml-sdk==1.48.0 
+azureml-sdk==1.57.0
+mlflow==2.3.2
 pandas==1.5.3
 numpy==1.21.0
-scikit-learn==1.2.2
+scikit-learn==1.5.1
 xgboost==1.6.2
-mlflow==2.3.2
 joblib==1.2.0
 yfinance==0.2.12
-azureml-sdk[automl]==1.48.0
+pytz==2023.3
+requests==2.31.0
+scipy==1.9.3
+threadpoolctl==3.1.0
