--- a/.github/workflows/environment.yml
+++ b/.github/workflows/environment.yml
@@ -1,14 +1,34 @@
-name: myenv
-channels:
-  - defaults
-  - conda-forge
-dependencies:
-  - python=3.9
-  - pandas=1.5.3
-  - numpy=1.21.0
-  - scikit-learn=1.5.1
-  - xgboost=1.6.2
-  - joblib=1.2.0
-  - pytz=2023.3
-  - scipy=1.9.3
-  - threadpoolctl=3.1.0
+name: CI/CD Pipeline
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Miniconda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        python-version: 3.8
+        environment-file: environment.yml
+        auto-activate-base: false
+
+    - name: Install dependencies
+      run: conda env update --file environment.yml --name model-env
+
+    - name: Verify mlflow installation
+      run: |
+        conda activate model-env
+        pip show mlflow  # Check if mlflow is installed
+
+    - name: Run training script
+      run: |
+        conda activate model-env
+        python train.py  # Change this to the path of your training script
