--- a/.github/workflows/azure_ml_train.yml
+++ b/.github/workflows/azure_ml_train.yml
@@ -1,47 +1,29 @@
-name: Azure ML Workflow
+name: Train Stock Prediction Model
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
-permissions:
-  id-token: write
-  contents: read
+  workflow_dispatch:
 
 jobs:
-  train-and-deploy-model:
+  train:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Azure login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
+    - uses: actions/checkout@v2
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - name: Run Azure ML training script
+    - name: Train model
       run: python scripts/train_aml.py
-
-    - name: Deploy model
-      run: python scripts/deploy_model.py
-
-    - name: Diagnostic information
-      run: |
-        echo "GitHub Repository: ${{ github.repository }}"
-        echo "Branch: ${{ github.ref }}"
-        echo "Workflow: ${{ github.workflow }}"
-        echo "Actor: ${{ github.actor }}"
-        echo "Event Name: ${{ github.event_name }}"
+    - name: Upload model artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: model
+        path: outputs/stock_prediction_model.pkl
